Massive testing and fixer overhaul
- Added some missing fixers
- Fill in gaps
- Reuse code instead of duplicating
- Share test sources